	in ARGV then don't ask first.  And added a print_breaking for long
	package listings. Disabled parent essential params on splitoffs.
	Changed BuildDependsOnly and Essential checks from has_param to
	param_boolean, in case it's there and set to false. Fixed the not
	installed warning, and prints and exits if nothing to do instead of
	dieing.

2003-12-03  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Initial go at PODifying the docs.

2003-12-03  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Shuffled @EXPORT_OK to be in same order as the subs
	appear in the file.

2003-12-02  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Added --buildonly to fink list command, to list all
	packages that have a BuildDependsOnly tag. Added --buildonly to
	remove and purge as well. And Fixed fink list with virtuals, so
	if is_virtual returns 2 treat like normal pkg in listing. Added
	initial BuildConflicts code.
	* Package.pm: Fixed is_virtual so new virtuals (as of
	VirtPackage.pm) now work again, but since they have descriptions
	and version, they return 2.
	* PkgVersion.pm: Changed resolve_depends in order to enable
	proper BuildConflicts, now requires a second param "field".
	* validator.pm: Added BuildConflicts as a valid field.

2003-12-01  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Actually, my entry would fail (fink crash) if there
	were no map, not if no expanding was needed. Fixed. thesin's
	modification is a nice optimization, but seems orthogonal to the
	actual problem.

2003-11-29  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Services.pm: With Daniel Macks entry on 11-26 expand_percent would
	fail if no expanding was needed.  Added a check to identify
	if it was needed to continue and if not just return the original
	string.

2003-11-27  Dave Morrison <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: test to see if the package being currently built
	violates any "BuildDependsOnly: true" directives, and if so,